Fixing alignment issue for branch kebabmenu in firefox

--- a/src/client/flogo/packages/diagram/tiles/tile-branch.component.less
+++ b/src/client/flogo/packages/diagram/tiles/tile-branch.component.less
@@ -191,11 +191,11 @@
 
 .menu-icon-close {
   .kebabmenu();
-  position: absolute;
-  top: 2px;
-  right: 3px;
   color: #899bcf;
-  font-size: 8px;
+  font-size: 0.65em;
+  position: relative;
+  height: 100%;
+  top: -0.75em;
   display: none;
 
 }
